# hansb_me_rs

./: Cargo.toml  Dioxus.toml  Dockerfile  rust-analyzer.toml
assets/css/: components.css  custom.css  main.css  site.css
assets/img/icon/skill/: Untitled.xcf  sql.xcf
src/: components.rs  data.rs  main.rs  pages.rs  server.rs
src/components/: badge.rs  code_block.rs  key_grid.rs  listing.rs  menu.rs  navbar.rs  search.rs  section.rs  title.rs
src/data/: directory.rs  id.rs  key_handlers.rs  keyboard_nav.rs  markdown.rs  menu.rs  searchable.rs  seq.rs  skill.rs
src/pages/: projects.rs
src/pages/about/: index.rs
src/pages/devlog/: content.rs  index.rs
src/pages/error/: index.rs
src/pages/home/: index.rs
src/pages/projects/: content.rs  index.rs  project.rs
src/pages/projects/content/: blank.rs  rpc_bot.rs  rpc_gg.rs  test.rs
src/server/: db.rs  devlog.rs  read_dir.rs  read_md.rs
store/markdown/sample/: sample.md
